--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run build:tests && cd dist-test && node --test"
   },
   "devDependencies": {
-    "@types/node": "latest",
-    "typescript": "latest"
+    "@types/node": "^24.6.2",
+    "typescript": "^5.9.3"
   }
 }
