--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "@matt.kantor/silk-demo-server-node",
   "version": "0.0.0",
   "main": "dist/index.js",
   "type": "module",
