--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^24.6.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@matt.kantor/silk": "latest"
   }
 }
