--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "composite": true,
     "exactOptionalPropertyTypes": true,
+    "jsx": "react",
+    "jsxFactory": "createElement",
+    "jsxFragmentFactory": "createElement",
     "lib": ["esnext"],
     "module": "nodenext",
     "noPropertyAccessFromIndexSignature": true,
