--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["./src/**/*.test.ts"]
+  "include": ["./src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["./src/**/*.test.ts", "src/**/*.test.tsx"]
 }
