Make custom error pages possible in server.ts

--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -3,6 +3,11 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "include": ["./src/**/*.ts", "src/**/*.tsx", "src/content/*.page.tsx"],
+  "include": [
+    "./src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.*.tsx",
+    "src/**/*.*.*.tsx"
+  ],
   "exclude": ["./src/**/*.test.ts", "src/**/*.test.tsx"]
 }
