Tweak routing filename conventions

--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -3,11 +3,6 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "include": [
-    "./src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.*.tsx",
-    "src/**/*.*.*.tsx"
-  ],
-  "exclude": ["./src/**/*.test.ts", "src/**/*.test.tsx"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+  "exclude": ["./src/**/*.test.ts", "./src/**/*.test.tsx"]
 }
