Remove unused test machinery from hello world demo

--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -4,12 +4,10 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc --build tsconfig.main.json",
-    "build:tests": "tsc --project tsconfig.main.json --outDir dist-test --declarationDir dist && tsc --build tsconfig.test.json",
+    "build": "tsc --build",
     "clean": "rm -rf dist* *.tsbuildinfo",
     "copy-non-typescript-files": "./copy-non-typescript-files",
-    "start": "npm run clean && npm run build && npm run copy-non-typescript-files && node .",
-    "test": "npm run build:tests && cd dist-test && node --test"
+    "start": "npm run clean && npm run build && npm run copy-non-typescript-files && node ."
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
