--- a/hello-world/tsconfig.json
+++ b/hello-world/tsconfig.json
@@ -1,6 +1,19 @@
 {
-  "references": [
-    { "path": "./tsconfig.test.json" },
-    { "path": "./tsconfig.main.json" }
-  ]
+  "compilerOptions": {
+    "exactOptionalPropertyTypes": true,
+    "jsx": "react",
+    "jsxFactory": "createElement",
+    "jsxFragmentFactory": "createElement",
+    "lib": ["es2023"],
+    "module": "node20",
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUncheckedSideEffectImports": true,
+    "outDir": "dist",
+    "rootDir": "src",
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "es2023",
+    "verbatimModuleSyntax": true
+  }
 }
