Switch to @superhighway/loom and @superhighway/silk

--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@matt.kantor/loom-node": "latest",
-    "@matt.kantor/silk": "latest"
+    "@superhighway/loom": "latest",
+    "@superhighway/silk": "latest"
   }
 }
