--- a/blog/package.json
+++ b/blog/package.json
@@ -16,7 +16,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@matt.kantor/loom-node": "latest",
-    "@matt.kantor/silk": "latest"
+    "@superhighway/loom": "latest",
+    "@superhighway/silk": "latest"
   }
 }
