--- a/feed-aggregator/package.json
+++ b/feed-aggregator/package.json
@@ -17,8 +17,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@matt.kantor/loom-node": "latest",
-    "@matt.kantor/silk": "latest",
+    "@superhighway/loom": "latest",
+    "@superhighway/silk": "latest",
     "mime": "^4.1.0",
     "sax": "^1.4.1"
   }
