--- a/feed-aggregator/package.json
+++ b/feed-aggregator/package.json
@@ -4,11 +4,12 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc --build tsconfig.main.json",
+    "build": "npm run compile; npm run copy-non-typescript-files",
     "build:tests": "tsc --project tsconfig.main.json --outDir dist-test --declarationDir dist && tsc --build tsconfig.test.json",
     "clean": "rm -rf dist* *.tsbuildinfo",
+    "compile": "tsc --build tsconfig.main.json",
     "copy-non-typescript-files": "./copy-non-typescript-files",
-    "start": "npm run clean && npm run build && npm run copy-non-typescript-files && node .",
+    "start": "npm run clean && npm run build; node .",
     "test": "npm run build:tests && cd dist-test && node --test"
   },
   "devDependencies": {
