--- a/feed-aggregator/tsconfig.json
+++ b/feed-aggregator/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "references": [
-    { "path": "./tsconfig.test.json" },
-    { "path": "./tsconfig.main.json" }
-  ]
+  "references": [{ "path": "./tsconfig.test.json" }, { "path": "./tsconfig.main.json" }]
 }
